Add relevant pointers

--- a/src/content/graphos/delivery/check-configurations.mdx
+++ b/src/content/graphos/delivery/check-configurations.mdx
@@ -11,7 +11,7 @@ You can configure schema checks behavior to suit your use case using either Grap
 - Check schema changes against multiple graph variants.
 - Ignore changes to default values.
 - Ignore potentially breaking changes when an operations check runs against zero operations.
-- Enable custom checks.
+- Enable [custom checks](./custom-checks).
 
 ## Using GraphOS Studio (recommended)
 
