--- a/src/content/graphos/delivery/run-checks.mdx
+++ b/src/content/graphos/delivery/run-checks.mdx
@@ -4,7 +4,8 @@ subtitle: Manually run and integrate schema checks into your CI pipeline
 description: Learn how to run GraphOS schema checks against GraphQL schema changes—including as part of your CI pipeline.
 ---
 
-This guide covers running your first schema check and integrating checks into your CI pipeline. See [Configure Schema Checks](./check-configurations) for configuration options.
+This guide covers running your first schema check and integrating checks into your CI pipeline.
+See [Configure Schema Checks](./check-configurations) for configuration options.
 
 ## Prerequisites
 
@@ -238,7 +239,8 @@ jobs:
 
 ## Next steps
 
-Once you've enabled schema checks, you can [configure them](./check-configurations) to suit your use case. Configurations include excluding certain historical operations from operations checks, ignoring certain types of schema changes, and more.
+Once you've enabled schema checks, you can [configure them](./check-configurations) to suit your use case.
+Configurations include excluding certain historical operations from operations checks, ignoring certain types of schema changes, enabling [custom checks](./custom-checks) and more.
 
 ### Integrating with GitHub
 
