--- a/src/content/graphos/delivery/custom-checks.mdx
+++ b/src/content/graphos/delivery/custom-checks.mdx
@@ -242,4 +242,4 @@ You should now see your configured webhook on the configuration page, be able to
 
 To-do: More information on an example implementation.
 
-Refer to the [example implementation](https://github.com/apollosolutions/custom-check-examples) for a custom check that enforces eslint rules.
+Refer to the [example implementation](https://github.com/apollosolutions/custom-check-examples) for a custom check that enforces ESLint rules.
