--- a/src/content/graphos/delivery/checks-reference.mdx
+++ b/src/content/graphos/delivery/checks-reference.mdx
@@ -4,11 +4,11 @@ subtitle: Reference for types of schema changes that checks can detect
 description: GraphOS Schema checks reference for schema changes in your GraphQL schema.
 ---
 
-This reference describes the operations checks statuses you may see in GraphOS Studio and the schema change types reported by [the Rover CLI `subgraph check` response](./run-checks#the-check-response).
+This reference describes the [operations checks](./schema-checks#operations-checks) statuses you see in GraphOS Studio and the schema change types reported by [the Rover CLI `subgraph check` response](./run-checks#the-check-response).
 
 ## Operations check statuses
 
-GraphOS classifies [operations checks](./schema-checks#types-of-checks) in Studio with the following statuses:
+GraphOS classifies operations checks with the following statuses:
 
 <table class="field-table">
   <thead>
