--- a/src/content/graphos/delivery/check-configurations.mdx
+++ b/src/content/graphos/delivery/check-configurations.mdx
@@ -41,12 +41,12 @@ You configure operations, linter, and proposals checks.
 
 #### Linter check configurations
 
-Configurations include whether to include linter checks (on by default), approved `@tag` names, and [severity level](./schema-linter/#setting-severity-levels) of linter rules.
+Linter check configurations include whether to include linting checks (on by default) and linter rules' [severity levels](./schema-linter/#setting-severity-levels).
 See [Linter configuration](./schema-linter/#linter-configuration) for details.
 
 #### Proposals check configurations
 
-You can configure schema checks to include a Proposals task that verifies whether the schema changes a check is running on have matching and approved schema proposals.
+You can configure schema checks to include a Proposals task that verifies whether schema changes have matching and approved schema proposals.
 (Off by default.) [Learn more.](./schema-proposals/configuration#configure-schema-checks)
 
 ## Using the Rover CLI
