--- a/src/content/graphos/delivery/run-checks.mdx
+++ b/src/content/graphos/delivery/run-checks.mdx
@@ -125,7 +125,7 @@ You can rerun checks from GraphOS Studio. Select the check and click **Rerun che
   width="300"
 />
 
-The new run uses the current [check configuration options](./check-configurations), regardless of the configuration at the time of the original run.
+The new check run uses the current [check configuration options](./check-configurations), regardless of the configuration at the time of the original run.
 Similarly, the new run's time window is based on the current time, not when the original check ran.
 
 <Note>
