--- a/src/content/graphos/delivery/schema-checks.mdx
+++ b/src/content/graphos/delivery/schema-checks.mdx
@@ -4,10 +4,10 @@ subtitle: Validate proposed changes to your schema are safe
 description: Use GraphOS Schema checks to identify and validate potential breaking changes in your GraphQL schema before deployment.
 ---
 
-Certain changes to your graph's schema (such as removing a field or type) might break one of your application's clients.
-GraphOS schema checks help you identify breaking changes before you make them. They can also help you identify when a potentially dangerous change is, in fact, safe.
+Certain changes to your graph's schema, such as removing a field or type, might break one of your application's clients.
+GraphOS _schema checks_ help you identify breaking changes before you make them. They can also help you identify when a potentially dangerous change is, in fact, safe.
 
-You run checks using the Rover CLI and can integrate checks into your CI pipeline for automated validation of each schema change.
+You run schema checks using the Rover CLI and can integrate checks into your CI pipeline for automated validation of each schema change.
 GraphOS Studio displays check results, helping you make informed decisions about evolving your graph.
 
 <img
