--- a/src/content/graphos/delivery/run-checks.mdx
+++ b/src/content/graphos/delivery/run-checks.mdx
@@ -4,8 +4,7 @@ subtitle: Manually run and integrate schema checks into your CI pipeline
 description: Learn how to run GraphOS schema checks against GraphQL schema changes—including as part of your CI pipeline.
 ---
 
-This guide covers running your first schema check and integrating checks into your CI pipeline.
-See [Configure Schema Checks](./check-configurations) for configuration options.
+This guide covers running your first schema check and integrating checks into your CI pipeline. See [Configure Schema Checks](./check-configurations) for configuration options.
 
 ## Prerequisites
 
