--- a/src/content/graphos/delivery/custom-checks.mdx
+++ b/src/content/graphos/delivery/custom-checks.mdx
@@ -258,6 +258,4 @@ You should now see your configured webhook on the checks configuration page and 
 
 ## Example implementation
 
-To-do: More information on an example implementation.
-
-Refer to the [example implementation](https://github.com/apollosolutions/custom-check-examples) for a custom check that enforces ESLint rules.
+Refer to the [example implementation](https://github.com/apollosolutions/custom-check-examples) for a custom check validation service that enforces GraphQL ESLint rules.
